force-app/main/default/objects/Tech_Vendedor__c/Tech_Vendedor__c.object-meta.xml
<CustomObject>
    <label>Vendedor</label>
    <nameField>
        <displayFormat>V-{0000}</displayFormat>
        <label>No. Vendedor</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tech Vendedores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>