force-app/main/default/objects/Tech_Vendedor__c/fields/Carga_Trabajo__c.field-meta.xml
<CustomField>
    <fullName>Carga_Trabajo__c</fullName>
    <label>Carga de trabajo</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>