force-app/main/default/objects/Tech_Vendedor__c/fields/Estatus__c.field-meta.xml
<CustomField>
    <fullName>Estatus__c</fullName>
    <label>Estatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activo</fullName>
            </value>
            <value>
                <fullName>Inactivo</fullName>
            </value>
            <value>
                <fullName>Suspendido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>