force-app/main/default/objects/Tech_Vendedor__c/fields/Fecha_Inicio__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Inicio__c</fullName>
    <label>Fecha de inicio</label>
    <type>Date</type>
</CustomField>