force-app/main/default/objects/Tech_Vendedor__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Nombre</label>
    <type>TextArea</type>
</CustomField>