force-app/main/default/objects/Tech_Vendedor__c/fields/Porcentaje_Comision_Ollin__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Comision_Ollin__c</fullName>
    <label>% Comisión sobre Ollin</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>