force-app/main/default/objects/Tech_Vendedor__c/fields/Promotoria__c.field-meta.xml
<CustomField>
    <fullName>Promotoria__c</fullName>
    <label>Promotoría</label>
    <length>100</length>
    <type>Text</type>
</CustomField>