force-app/main/default/objects/Tech_Vendedor__c/fields/Ramos__c.field-meta.xml
<CustomField>
    <fullName>Ramos__c</fullName>
    <label>Ramos</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ramos_GVS</valueSetName>
    </valueSet>
</CustomField>