force-app/main/default/objects/Tech_Vendedor__c/fields/Tipo_vendedor__c.field-meta.xml
<CustomField>
    <fullName>Tipo_vendedor__c</fullName>
    <label>Tipo vendedor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Humano</fullName>
            </value>
            <value>
                <fullName>IA</fullName>
            </value>
            <value>
                <fullName>Externo</fullName>
            </value>
            <value>
                <fullName>Promotoría</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>