force-app/main/default/objects/Tech_Vendedor__c/fields/Usuario_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Usuario_Salesforce__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tech_Vendedores</relationshipName>
    <type>Lookup</type>
</CustomField>