force-app/main/default/objects/Tech_Vendedor__c/fields/Vendedor_Autos__c.field-meta.xml
<CustomField>
    <fullName>Vendedor_Autos__c</fullName>
    <formula>INCLUDES(Ramos__c, &quot;Autos&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendedor Autos</label>
    <type>Checkbox</type>
</CustomField>