force-app/main/default/objects/Tech_Vendedor__c/fields/Vendedor_Danos__c.field-meta.xml
<CustomField>
    <fullName>Vendedor_Danos__c</fullName>
    <formula>INCLUDES(Ramos__c, &quot;Danos&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendedor Danos</label>
    <type>Checkbox</type>
</CustomField>