force-app/main/default/objects/Tech_Vendedor__c/fields/Vendedor_Fianzas__c.field-meta.xml
<CustomField>
    <fullName>Vendedor_Fianzas__c</fullName>
    <formula>INCLUDES(Ramos__c, &quot;Fianzas&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendedor Fianzas</label>
    <type>Checkbox</type>
</CustomField>