force-app/main/default/objects/Tech_Vendedor__c/fields/Vendedor_GMM__c.field-meta.xml
<CustomField>
    <fullName>Vendedor_GMM__c</fullName>
    <formula>INCLUDES(Ramos__c, &quot;GMM&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendedor GMM</label>
    <type>Checkbox</type>
</CustomField>