force-app/main/default/objects/Tech_Vendedor__c/fields/Vendedor_PPR__c.field-meta.xml
<CustomField>
    <fullName>Vendedor_PPR__c</fullName>
    <formula>INCLUDES(Ramos__c, &quot;PPR&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendedor PPR</label>
    <type>Checkbox</type>
</CustomField>