force-app/main/default/objects/Tech_Vendedor__c/fields/Vendedor_RC__c.field-meta.xml
<CustomField>
    <fullName>Vendedor_RC__c</fullName>
    <formula>INCLUDES(Ramos__c, &quot;RC&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendedor RC</label>
    <type>Checkbox</type>
</CustomField>