force-app/main/default/objects/Tech_Vendedor__c/fields/Vendedor_Salud__c.field-meta.xml
<CustomField>
    <fullName>Vendedor_Salud__c</fullName>
    <formula>INCLUDES(Ramos__c, &quot;Salud&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendedor Salud</label>
    <type>Checkbox</type>
</CustomField>