force-app/main/default/objects/Tech_Vendedor__c/fields/Zona__c.field-meta.xml
<CustomField>
    <fullName>Zona__c</fullName>
    <label>Zona</label>
    <length>100</length>
    <type>Text</type>
</CustomField>